prep next release

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,8 @@
 name    = Class-Accessor-Class
-author  = Ricardo SIGNES <rjbs@cpan.org>
+author  = Ricardo SIGNES <rjbs@semiotic.systems>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 copyright_year   = 2004
 
 [@RJBS]
+perl-support = none
